@@ -6,6 +6,7 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 == Version 1.3 == *IN PROGRESS*
 
 * Improved descriptions and mismatch descriptions of several matchers, including:
+  - Fixed "contains" and "containsInAnyOrder" to describe mismatch if item is not a collection.
   - Fixed "describedAs" and "is" to use their nested matchers to generate mismatch descriptions.
   - "sameInstance" is more readable, and includes object memory addresses.
   - If object has a count, "hasCount" mismatch describes actual count.
